[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depth-elevation"
version = "0.1.0"
description = "Depth image to elevation map pipeline (Isaac Lab, image_plane convention)"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["depth_elevation*"]
